<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="8dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:fontFamily="@font/catamaran"
        android:text="@string/guess_a_number"
        android:textAlignment="center"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:fontFamily="@font/catamaran"
        android:text="@string/between"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/guess_range_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:fontFamily="@font/catamaran"
        android:text="@string/guess_range"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/guess_number_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:ems="10"
        android:hint="@string/enter_a_number"
        android:inputType="number"
        android:textAlignment="center" />

    <SeekBar
        android:id="@+id/guess_number_seekbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="100" />

    <Button
        android:id="@+id/submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:onClick="onSubmitClicked"
        android:text="@android:string/ok" />

    <TextView
        android:id="@+id/guess_result_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:fontFamily="@font/catamaran"
        android:text="@string/your_last_guess"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/guess_count_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:fontFamily="@font/catamaran"
        android:text="@string/number_of_guesses"
        android:textSize="18sp" />

</LinearLayout>